# kube-news

./: .env.example  .gitignore  Makefile  prefect.yaml  pyproject.toml
.github/workflows/: ci.yml  retrain-classifier.yml
app/: requirements.txt  streamlit_app.py
app/.streamlit/: config.toml
app/pages/: 01_rag_chat.py  02_deprecation_alerts.py  03_recent_updates.py  04_mlops_dashboard.py
config/: sources.yaml
docs/: architecture.md  setup.md
flows/: drift_check.py  ingest_all.py  ingest_cves.py  ingest_eol.py  ingest_github.py  ingest_rss.py  process_and_embed.py  serve_all.py
infra/lambda/: ec2_scheduler.py
infra/terraform/: dynamodb.tf  ec2.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf
models/classifier/: CURRENT_MODEL  train.py
scripts/: fix_eol_dates.py  reclassify_all.py  reset_bad_classifications.py
src/: config.py
src/ingestion/: artifact_hub_client.py  cve_client.py  endoflife_client.py  github_client.py  rss_client.py
src/mlops/: drift_detector.py  mlflow_tracker.py
src/processing/: classifier.py  embedder.py  entity_extractor.py  model_loader.py  text_cleaner.py
src/rag/: chat_engine.py  retriever.py
src/storage/: dynamodb_client.py  qdrant_client.py  s3_client.py
tests/unit/: test_classifier.py  test_config.py  test_cve_client.py  test_drift_detector.py  test_endoflife_client.py  test_entity_extractor.py  test_github_client.py  test_mlflow_tracker.py  test_rss_client.py  test_text_cleaner.py
