[project]
name = "kube-news"
version = "0.1.0"
description = "Kubernetes ecosystem knowledge aggregator with MLOps pipeline"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "prefect>=3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0.0",
    "mlflow>=2.15.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "qdrant-client>=1.11.0",
]
app = [
    "streamlit>=1.38.0",
    "openai>=1.40.0",
    "qdrant-client>=1.11.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "boto3-stubs[s3,dynamodb]>=1.35.0",
    "moto[s3,dynamodb]>=5.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "feedparser"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qdrant_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mlflow"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
